# nubiadoc

./: .agents.yaml  .gitignore  AGENTS.md  CLAUDE.md  INSTRUCTIONS_PROJET.md  PROGRESS.md  opencode.json
api/: .env.example  .eslintrc.cjs  AGENTS.md  Cargo.toml  README.md  package.json  tsconfig.json
api/.sqlx/: query-32bfb6afb255d26e2d077ee72137d5aaee76af0dc1f9c6b35bb78e052d08473e.json  query-4a55e156bb6958b2d1a30c88ff63aa576f3e893518cde7a833db083a29425215.json  query-4c32c005f0faa26aebb00db54696068dcac4c6f61a98e744c695dd48fac616ff.json  query-536f0aa92b44c1af8737173c41b7614a1a044f989e60826638b4857c76a30cfa.json  query-5ec73c179607e89b7648a110616162438dea411b66d2280c129ec2ffa5e8d3f6.json  query-938bcc34c7cb22967f011f5ca442adadeb05fc3a42665216816a87f65a23ec30.json  query-946c5cd53f2915d51e6c27b433452cfd9159a0e7260de755fc050ebcc5f1b367.json  query-ae34a08adc82bf79feb6c53e5d25d28d6f27ef5a2d3d609149b13c0059354cc3.json  query-e3e83bb949d840c635bffce930fd7015582b593778e295e86345046171e686b8.json  query-ef579525d86dbd2ee2bd02c59580cf78f253431dc92a1a59d13f7e19e9fce84e.json  query-f3e64cee899da7d119037bd9594934d3bb8f4b339a122707f091c04454322e96.json  query-fa7c6a32322e7d15d6fd93c69073f2ca1842fb7b208b0cb64ceb5696e2fc874c.json  query-ffbb97bf22a7430ee7c928b891f449802d6447f18808a3b29d019982d39ef5a7.json
api/hello/: Cargo.toml
api/prisma/: schema.prisma
api/src/: app.module.ts  appointments.rs  auth.rs  billing.rs  bookings.rs  cabinet_info.rs  cabinet_messaging.rs  cabinet_secretariats.rs  clinical.rs  consultations.rs  dashboard.rs  dental_chart.rs  devices.rs  documents.rs  health.rs  implant_passport.rs  lib.rs  main.rs  main.ts  marketplace.rs  medical_record.rs  messaging.rs  notifications.rs  prescriptions.rs  provider_secretariat.rs  reminders.rs  reviews.rs  scheduling.rs  treatment_plans.rs  waiting_list.rs
api/test/: rls-isolation.e2e-spec.ts
api/tests/: account_consents_get.rs  account_consents_put.rs  account_coverage_card.rs  account_coverage_get.rs  account_coverage_patch.rs  account_coverage_post.rs  account_dependents_delete.rs  account_dependents_get.rs  account_dependents_get_by_id.rs  account_dependents_patch.rs  account_dependents_post.rs  account_get.rs  account_notification_preferences_get.rs  account_notification_preferences_patch.rs  account_patch.rs  acts.rs  appointments.rs  appointments_callback_request.rs  appointments_cancel.rs  (+80 more)
(+1165 files in other folders)
