[workspace]
members = [
  "crates/core/config",
  "crates/core/tenancy",
  "crates/core/crypto",
]
resolver = "2"

[workspace.dependencies]
sqlx        = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid        = { version = "1", features = ["v4", "serde"] }
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
thiserror   = "1"
tracing     = "0.1"
anyhow      = "1"
async-trait = "0.1"
