[workspace]
members = [
  "crates/core/config",
  "crates/core/tenancy",
  "crates/core/crypto",
]
resolver = "2"

[workspace.dependencies]
axum        = { version = "0.7", features = ["multipart"] }
serde_json  = "1"
tower       = { version = "0.4", features = ["util"] }
sqlx        = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid        = { version = "1", features = ["v4", "serde"] }
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
chrono      = "0.4"
thiserror   = "1"
tracing     = "0.1"
anyhow      = "1"
async-trait = "0.1"

[package]
name    = "nubia-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum        = { workspace = true }
tokio       = { workspace = true }
tower       = { workspace = true }
tower-http  = { version = "0.5", features = ["cors"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
totp-rs      = { version = "5", features = ["gen_secret"] }
jsonwebtoken = "9"
argon2       = { version = "0.5", features = ["std", "password-hash"] }
hmac         = "0.12"
sha2         = "0.10"
hex          = "0.4"
