[package]
name    = "core-tenancy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqlx      = { workspace = true }
uuid      = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
tokio     = { workspace = true }

[dev-dependencies]
sqlx  = { workspace = true }
uuid  = { workspace = true }
tokio = { workspace = true }
